# two-photon-lithography

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README.md.save  pyproject.toml  requirements.txt
configs/: default_config.yaml
configs/material_configs/: ip_dip.yaml  ormocomp.yaml
docs1/: index.md
docss/: getting_started.md
docss/api_reference/: module_documentation.md
docss/theory/: laser_parameters.md  photoresist_chemistry.md  two_photon_absorption.md
docss/tutorials/: basic_structure_design.md  parameter_optimization.md  troubleshooting.md
examples/basic_shapes/: cube.py
notebooks/: 01_design_workflow.ipynb  04_data_visualization.ipynb
scr/tpl/: __init__.py
scr/tpl/core/: __init__.py  laser_control.py  stage_control.py
scr/tpl/design/: __init__.py  geometry.py  path_planning.py  primitives.py
tests/: test_geometry.py
tests/unit/: test_geometry.py  test_path_planning.py
