[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "two-photon-lithography"
version = "0.1.0"
description = "A comprehensive control and simulation framework for two-photon lithography"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Zeyad Mustafa", email = "Zeyad.uni@gmail.com"}
]
maintainers = [
    {name = "Zeyad Mustafa", email = "zeyad.uni@gmail.com"}
]
keywords = [
    "two-photon lithography",
    "nanofabrication",
    "3d-printing",
    "laser",
    "semiconductor",
    "microfabrication"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "trimesh>=3.9.0",
    "PyYAML>=5.4.0",
    "pyserial>=3.5",
    "opencv-python>=4.5.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "pytest-mock>=3.6.0",
    "black>=21.9b0",
    "flake8>=3.9.0",
    "pylint>=2.11.0",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.2.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.15.0",
]
gui = [
    "PyQt5>=5.15.0",
    "pyqtgraph>=0.12.0",
]
ml = [
    "scikit-learn>=0.24.0",
    "optuna>=2.10.0",
]
all = [
    "two-photon-lithography[dev,docs,gui,ml]",
]

[project.urls]
Homepage = "https://github.com/Zeyad-Mustafa/two-photon-lithography"
Documentation = "https://github.com/Zeyad-Mustafa/two-photon-lithography/docs"
Repository = "https://github.com/Zeyad-Mustafa/two-photon-lithography"
"Bug Tracker" = "https://github.com/Zeyad-Mustafa/two-photon-lithography/issues"

[project.scripts]
tpl-control = "tpl.cli:main"
tpl-simulate = "tpl.simulation.cli:main"
tpl-calibrate = "tpl.utils.calibration:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tpl*"]
namespaces = false

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=tpl --cov-report=html --cov-report=term"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hardware: marks tests requiring hardware connection",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "100"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]